[gd_scene load_steps=10 format=2]

[ext_resource path="res://res/box.png" type="Texture" id=1]
[ext_resource path="res://res/arrow.png" type="Texture" id=2]
[ext_resource path="res://res/arrow_down.png" type="Texture" id=3]
[ext_resource path="res://res/button.png" type="Texture" id=4]
[ext_resource path="res://res/8bitOperatorPlusSC-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/dice_selector.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 10
extra_spacing_bottom = -6
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 34
font_data = ExtResource( 5 )

[node name="DiceSelector" type="Sprite"]
position = Vector2( 331.993, 958.232 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
script = ExtResource( 6 )

[node name="ConfirmButton" type="ToolButton" parent="."]
margin_left = -31.9384
margin_top = 21.5782
margin_right = 26.0616
margin_bottom = 50.5782
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ConfirmButton"]
position = Vector2( 31.8582, 13.8768 )
scale = Vector2( 1.09994, 0.8 )
texture = ExtResource( 4 )
hframes = 2

[node name="Label" type="Label" parent="ConfirmButton"]
anchor_top = -0.00996873
anchor_bottom = 0.334859
margin_left = 7.0
margin_top = 4.28909
margin_right = 57.0
margin_bottom = 13.2891
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Roll"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpButton" type="ToolButton" parent="."]
anchor_left = 7.94729e-08
anchor_top = 0.00451708
anchor_right = 0.111226
anchor_bottom = 0.00451708
margin_left = -33.9052
margin_top = -30.8199
margin_right = -0.58287
margin_bottom = 9.18011
rect_scale = Vector2( 0.6, 0.6 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownButton" type="ToolButton" parent="."]
anchor_left = 7.94729e-08
anchor_top = 0.00451708
anchor_right = 0.111226
anchor_bottom = 0.00451708
margin_left = -34.4834
margin_top = -5.66812
margin_right = -1.16107
margin_bottom = 34.3319
rect_scale = Vector2( 0.6, 0.6 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
anchor_top = -0.00106534
anchor_bottom = -0.00106533
margin_left = -37.0
margin_top = -53.8636
margin_right = 37.0
margin_bottom = -22.8636
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.380392, 0.203922, 0.0745098, 1 )
text = "Dice to Roll"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberLabel" type="Label" parent="."]
anchor_top = 0.00119331
anchor_bottom = 0.00119333
margin_left = -9.7109
margin_top = -30.0296
margin_right = 35.2891
margin_bottom = 17.9704
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.380392, 0.203922, 0.0745098, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shade" type="ColorRect" parent="."]
visible = false
margin_left = -48.0
margin_top = -64.0
margin_right = 48.0
margin_bottom = 64.0
color = Color( 0, 0, 0, 0.521569 )
__meta__ = {
"_edit_use_anchors_": false
}
